[package]
name = "x-dns"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full"] }
trust-dns-server = "0.23"
trust-dns-client = "0.23"
trust-dns-proto = "0.23"
once_cell = "1.21.3"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

